# pulsemidi

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CHORDS.md  MANUAL.md  SPEC.md
ernest-keyz-studios/: README.md
ernest-keyz-studios/docs/: INSTALL_GUIDE.md  MANUAL.md  SPEC.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CcSliders.tsx  DeviceManager.tsx  DiagnosticsPanel.tsx  MidiMonitor.tsx  PerformanceView.tsx  PianoKeyboard.tsx  RoutingVisualization.tsx
src/pages/: Dashboard.tsx
src/services/: midiService.ts
src/store/: midiStore.ts
src/types/: midi.ts
src/utils/: chordUtils.ts  midiParser.ts  noteUtils.ts
vst/: Cargo.toml  package.sh
vst/pulsemidi-vst/: Cargo.toml
vst/pulsemidi-vst/src/: editor.rs  lib.rs  midi_utils.rs
